# grid-finder-USA

./: .gitignore  extract_parcels.ipynb  fetch_infra_data.py  fetch_land_data.py  fetch_utils.py  generate-clusters.py  generate-edges-paths.py  generate-roads.py  generate-tiles.py  generate_clusters.py  generate_edges_paths.py  generate_roads.py  predict_roads.py  preprocess-roads.py  preprocess-tiles-raster.py  preprocess_tiles_tabular.py  pyproject.toml  roads.ipynb  roads.py  train_roads.py
fetch_data/: fetch_infra_data.py  fetch_land_data.py  fetch_utils.py  process_roads_grid_routes.py
generate/: generate_clusters.py  generate_edges_paths.py  generate_roads.py  generate_roads_grid_routes.py  generate_tiles.py
miscellaneous/: extract_parcels.ipynb  roads.ipynb
miscellaneous_notebooks/: extract_parcels.ipynb  hufld_dso.ipynb
predict/: predict_roads.py
preprocess/: preprocess_edges.py  preprocess_roads.py  preprocess_tiles_raster.py  preprocess_tiles_tabular.py
train/: train_edges.py  train_roads.py  train_tiles_tabular.py
