[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.73",
    "geopandas>=1.1.3",
    "networkx>=3.6.1",
    "osmium>=4.3.0",
    "planetary-computer>=1.0.0",
    "pyarrow>=23.0.1",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.4",
    "requests>=2.32.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
